# concudaring

./: .gitignore  CMakeLists.txt  README.md  deleteFile.sh  hower,NULL,0);
Test/: main.cpp
playground/: Semaforo.cpp  Semaforo.h  main.cpp
src/: CommunicationChannel.cpp  CommunicationChannel.h  Semaforo.cpp  Semaforo.h  concudaring.cpp  concudaring.h  creatorDeckOfCards.cpp  creatorDeckOfCards.h  deckOfCards.cpp  deckOfCards.h  judge.cpp  judge.h  main.cpp  player.cpp  player.h  table.cpp  table.h
src/utils/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h  MemoriaCompartida.h  MemoriaCompartida2.h  Semaforo.cpp  Semaforo.h  SharedMemory.h  constants.h  types.h
src/utils/logger/: logger.cpp  logger.h  mensajes.h
